[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
description = "questpost"
name = "questpost"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "django == 4.1.7",
  "moralis == 0.1.34",
  "requests == 2.28.2",
  "python-dotenv == 1.0.0",
  "psycopg2 == 2.9.5",
  "gunicorn == 20.1.0",
  "djangorestframework == 3.14.0",
  "eth_abi == 4.0.0b2",
  "eth-utils == 2.1.0",
  "whitenoise == 6.4.0",
  "eth-hash[pycryptodome] == 0.5.1",
  "pycryptodome == 3.17",
]
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "black == 23.1.0",
  "mypy == 1.0.1",
  "flake8 == 6.0.0",
  "flake8-bugbear == 23.2.13",
  "flake8-comprehensions == 3.10.1",
  "pep8-naming == 0.13.3",
  "nox == 2022.11.21",
  "pyproject-flake8 == 6.0.0.post1",
  "isort == 5.12.0",
  "django-stubs == 1.15.0",
  "types-requests == 2.28.11.15",
]

[tool.mypy]
disable_error_code = "misc"
exclude = "migrations"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.flake8]
exclude = "venv,.nox"
extend-ignore = ["E203"]
extend-immutable-calls = ["Argument"]
max-line-length = 99

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
force_sort_within_sections = true
line_length = 99
profile = "black"
skip_gitignore = true
src_paths = ["questpost"]

[tool.setuptools]
packages = ["questpost"]

[tool.django-stubs]
django_settings_module = "questpost.config.settings"
